# labs

./: CMakeLists.txt  main.cpp
include/: Eleven.h
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.h  point.h  rectangle.h  square.h  triangle.h
lab3/src/: figure.cpp  point.cpp  rectangle.cpp  square.cpp  triangle.cpp
lab3/tests/: tests.cpp
lab4/: CMakeLists.txt
lab4/include/: figure.hpp  point.hpp  rectangle.hpp  square.hpp  triangle.hpp
lab4/tests/: tests.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: allocator.hpp  list.hpp
lab5/tests/: tests.cpp
lab6/: CMakeLists.txt
lab6/include/: BattleVisitor.hpp  Elf.hpp  ElfFactory.hpp  LoggingVisitor.hpp  NPC.hpp  NPCFactory.hpp  NPCLoader.hpp  NPCSaver.hpp  Robber.hpp  RobberFactory.hpp  Walkingknight.hpp
lab6/src/: Elf.cpp  LoggingVisitor.cpp  NPC.cpp  NPCSaver.cpp  Robber.cpp  Walkingknight.cpp  main.cpp
lab7/include/: NPC.hpp  NPCFactory.hpp  Robber.hpp  RobberFactory.hpp  Visitor.hpp  Walkingknight.hpp  WalkingknightFactory.hpp
lab7/src/: BattleVisitor.cpp  NPCFactory.cpp  NPCLoader.cpp  Walkingknight.cpp  main.cpp
src/: Eleven.cpp
test/: tests.cpp
